# PhonSSM

./: .gitattributes  .gitignore  EXPERIMENTS_TODO.md  LICENSE  README.md  RESULTS.md  pyproject.toml  requirements.txt
data/processed/: X_asl_citizen.npy  X_test.npy  X_train.npy  X_train_with_errors.npy  X_wlasl_pose_hands.npy  asl_citizen_label_map.json  asl_citizen_stats.json  component_scores_train.npy  error_labels_train.npy  error_metadata.json  is_correct_train.npy  label_map.json  wlasl_label_map.json  y_asl_citizen.npy  y_train_with_errors.npy  y_wlasl_pose_hands.npy
data/processed/merged/: X_test.npy  X_train.npy  X_val.npy  label_map.json  stats.json  y_test.npy  y_train.npy  y_val.npy
models/movement_analyzer/: best_model.keras  movement_analyzer.keras
models/phonssm/: __init__.py  agan.py  bissm.py  config.py  model.py
models/phonssm/checkpoints/20260116_230934/: config.json  history.json  results.json
models/sign_classifier/: best_model.keras  sign_classifier.keras
models/sign_classifier/logs/20260115_004437/train/: events.out.tfevents.1768455878.MAOMAO_4050.69956.0.v2
paper/: .gitignore  Makefile  README.md  comment.cut  main.tex  main_acm.tex  main_iclr.tex  main_iclr_4page.tex  main_iclr_8page.tex  references.bib  references_acm.bib
paper/lion/: main_lion.tex  references.bib
paper/scripts/: create_architecture_figure.py  create_figures.py  create_motivation_figure.py  create_phonological_figure.py  create_results_figure.py
training/: benchmark_external.py  merge_all_datasets.py  train_classifier.py  train_diagnosis.py
web/static/: index.html
(+7 files in other folders)
