[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phonssm"
version = "1.0.0"
description = "Phonology-Aware State Space Model for Sign Language Recognition"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jasper Zhang"},
    {name = "Bryan Cheng"},
    {name = "Austin Jin"},
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["sign-language", "asl", "deep-learning", "state-space-model", "skeleton"]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.62.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/bryanc5864/PhonSSM"
Repository = "https://github.com/bryanc5864/PhonSSM"

[tool.setuptools.packages.find]
where = ["."]
include = ["models*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]
